@@ -273,14 +273,14 @@ SEXP Rsm(SEXP x, SEXP stype, SEXP send)
 	    double *z = (double *) R_alloc(n, sizeof(double));
 	    double *w = (double *) R_alloc(n, sizeof(double));
 	    iter = sm_3RS3R(REAL(x), REAL(y), z, w, n, abs(iend),
-			      iend ? TRUE : FALSE);
+			    /* split_ends: */ (iend < 0) ? TRUE : FALSE);
 	    break;
 	}
 	case 2:
 	{
 	    double *z = (double *) R_alloc(n, sizeof(double));
 	    iter = sm_3RSS(REAL(x), REAL(y), z, n, abs(iend),
-			      iend ? TRUE : FALSE);
+			   /* split_ends: */ (iend < 0) ? TRUE : FALSE);
 	    break;
 	}
 	case 3:
@@ -288,7 +288,7 @@ SEXP Rsm(SEXP x, SEXP stype, SEXP send)
 	    double *z = (double *) R_alloc(n, sizeof(double));
 	    double *w = (double *) R_alloc(n, sizeof(double));
 	    iter = sm_3RSR(REAL(x), REAL(y), z, w, n, abs(iend),
-			   iend ? TRUE : FALSE);
+			   /* split_ends: */ (iend < 0) ? TRUE : FALSE);
 	    break;
 	}
 	case 4: // "3R"
